[gd_scene load_steps=33 format=2]

[ext_resource path="res://art/Background/Factory Floor Intro.png" type="Texture" id=1]
[ext_resource path="res://art/Items/Rejection Letter.png" type="Texture" id=2]
[ext_resource path="res://art/Audio Effects/Papers Shuffling.wav" type="AudioStream" id=3]
[ext_resource path="res://Rejection_Letter/Rejection_Letter.gd" type="Script" id=7]
[ext_resource path="res://art/Audio Effects/papers_rustle_short.mp3" type="AudioStream" id=8]

[sub_resource type="Animation" id=5]
resource_name = "Letter1_Animation"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0, 0, 0, 0.439216 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:flat")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=7]
resource_name = "Letter1_Close"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.439216 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:flat")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:flat")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
resource_name = "Letter2_Hide"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:flat")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.439216 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Letter2_Show"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:flat")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0, 0, 0, 0.439216 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:flat")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "Letter3_Hide"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:flat")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.439216 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "Letter3_Show"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:flat")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0, 0, 0, 0.439216 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:flat")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "Letter4_Hide"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:flat")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.439216 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "Letter4_Show"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:flat")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0, 0, 0, 0.439216 ) ]
}

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:flat")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "Letter5_Hide"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:flat")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.439216 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "Letter5_Show"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:flat")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0, 0, 0, 0.439216 ) ]
}

[sub_resource type="Animation" id=19]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:flat")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=20]
resource_name = "Letter6_Hide"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:flat")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.439216 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=21]
resource_name = "Letter6_Show"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:flat")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0, 0, 0, 0.439216 ) ]
}

[sub_resource type="Animation" id=22]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:flat")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=23]
resource_name = "Letter7_Hide"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:flat")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.439216 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=24]
resource_name = "Letter7_Show"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:flat")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0, 0, 0, 0.439216 ) ]
}

[sub_resource type="Animation" id=25]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:flat")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=26]
resource_name = "Letter8_Hide"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:flat")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.439216 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=27]
resource_name = "Letter8_Show"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:flat")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0, 0, 0, 0.439216 ) ]
}

[sub_resource type="Animation" id=28]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:flat")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "Document"
tracks/0/type = "value"
tracks/0/path = NodePath("RejectionLetter:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2784.68, 1199.83 ), Vector2( -23.6995, 47.1229 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Papers_rustle:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=29]
resource_name = "Document_Hide"
tracks/0/type = "value"
tracks/0/path = NodePath("RejectionLetter:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -7.591, -0.825198 ), Vector2( 2880.75, 1607.27 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("../Papers_rustle")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 8 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("RejectionLetter:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 838.151, 541.257 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Papers_rustle:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[node name="Rejection_Letter" type="Node2D"]
script = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0

[node name="Factory_Background" type="Sprite" parent="."]
position = Vector2( 640.5, 359.5 )
scale = Vector2( 0.333073, 0.333796 )
texture = ExtResource( 1 )

[node name="RejectionLetter" type="Sprite" parent="Factory_Background"]
position = Vector2( 838.151, 541.257 )
scale = Vector2( 1, 0.98 )
texture = ExtResource( 2 )

[node name="Letter1_Button" type="Button" parent="Factory_Background/RejectionLetter"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -320.0
margin_top = -1104.0
margin_right = 332.0
margin_bottom = -851.0
mouse_default_cursor_shape = 2
flat = true

[node name="Letter1_Animation" type="AnimationPlayer" parent="Factory_Background/RejectionLetter/Letter1_Button"]
anims/Letter1_Animation = SubResource( 5 )
anims/Letter1_Close = SubResource( 7 )
anims/RESET = SubResource( 6 )

[node name="Letter2_Button" type="Button" parent="Factory_Background/RejectionLetter"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -759.0
margin_top = -666.0
margin_right = 743.0
margin_bottom = -525.0
mouse_default_cursor_shape = 2
flat = true

[node name="Letter2_Animation" type="AnimationPlayer" parent="Factory_Background/RejectionLetter/Letter2_Button"]
anims/Letter2_Hide = SubResource( 8 )
anims/Letter2_Show = SubResource( 9 )
anims/RESET = SubResource( 10 )

[node name="Letter3_Button" type="Button" parent="Factory_Background/RejectionLetter"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -762.0
margin_top = -479.0
margin_right = 752.0
margin_bottom = -279.0
mouse_default_cursor_shape = 2
flat = true

[node name="Letter3_Animation" type="AnimationPlayer" parent="Factory_Background/RejectionLetter/Letter3_Button"]
anims/Letter3_Hide = SubResource( 11 )
anims/Letter3_Show = SubResource( 12 )
anims/RESET = SubResource( 13 )

[node name="Letter4_Button" type="Button" parent="Factory_Background/RejectionLetter"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -721.0
margin_top = -276.0
margin_right = 694.0
margin_bottom = -170.0
mouse_default_cursor_shape = 2
flat = true

[node name="Letter4_Animation" type="AnimationPlayer" parent="Factory_Background/RejectionLetter/Letter4_Button"]
anims/Letter4_Hide = SubResource( 14 )
anims/Letter4_Show = SubResource( 15 )
anims/RESET = SubResource( 16 )

[node name="Letter5_Button" type="Button" parent="Factory_Background/RejectionLetter"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -759.0
margin_top = -125.0
margin_right = 723.0
margin_bottom = 151.0
mouse_default_cursor_shape = 2
flat = true

[node name="Letter5_Animation" type="AnimationPlayer" parent="Factory_Background/RejectionLetter/Letter5_Button"]
anims/Letter5_Hide = SubResource( 17 )
anims/Letter5_Show = SubResource( 18 )
anims/RESET = SubResource( 19 )

[node name="Letter6_Button" type="Button" parent="Factory_Background/RejectionLetter"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -675.0
margin_top = 151.0
margin_right = 724.0
margin_bottom = 229.0
mouse_default_cursor_shape = 2
flat = true

[node name="Letter6_Animation" type="AnimationPlayer" parent="Factory_Background/RejectionLetter/Letter6_Button"]
anims/Letter6_Hide = SubResource( 20 )
anims/Letter6_Show = SubResource( 21 )
anims/RESET = SubResource( 22 )

[node name="Letter7_Button" type="Button" parent="Factory_Background/RejectionLetter"]
margin_left = -677.0
margin_top = 229.0
margin_right = 723.0
margin_bottom = 391.0
mouse_default_cursor_shape = 2
flat = true

[node name="Letter7_Animation" type="AnimationPlayer" parent="Factory_Background/RejectionLetter/Letter7_Button"]
anims/Letter7_Hide = SubResource( 23 )
anims/Letter7_Show = SubResource( 24 )
anims/RESET = SubResource( 25 )

[node name="Letter8_Button" type="Button" parent="Factory_Background/RejectionLetter"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -727.0
margin_top = 723.0
margin_right = 671.0
margin_bottom = 1022.0
mouse_default_cursor_shape = 2
flat = true

[node name="Letter8_Animation" type="AnimationPlayer" parent="Factory_Background/RejectionLetter/Letter8_Button"]
anims/Letter8_Hide = SubResource( 26 )
anims/Letter8_Show = SubResource( 27 )
anims/RESET = SubResource( 28 )

[node name="Letter_Animation" type="AnimationPlayer" parent="Factory_Background"]
autoplay = "Document"
anims/Document = SubResource( 1 )
anims/Document_Hide = SubResource( 29 )
anims/RESET = SubResource( 2 )

[node name="Papers_rustle" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[connection signal="mouse_entered" from="Factory_Background/RejectionLetter/Letter1_Button" to="." method="_on_Letter1_Button_mouse_entered"]
[connection signal="mouse_exited" from="Factory_Background/RejectionLetter/Letter1_Button" to="." method="_on_Letter1_Button_mouse_exited"]
[connection signal="pressed" from="Factory_Background/RejectionLetter/Letter1_Button" to="." method="_on_Letter1_Button_pressed"]
[connection signal="mouse_entered" from="Factory_Background/RejectionLetter/Letter2_Button" to="." method="_on_Letter2_Button_mouse_entered"]
[connection signal="mouse_exited" from="Factory_Background/RejectionLetter/Letter2_Button" to="." method="_on_Letter2_Button_mouse_exited"]
[connection signal="pressed" from="Factory_Background/RejectionLetter/Letter2_Button" to="." method="_on_Letter2_Button_pressed"]
[connection signal="mouse_entered" from="Factory_Background/RejectionLetter/Letter3_Button" to="." method="_on_Letter3_Button_mouse_entered"]
[connection signal="mouse_exited" from="Factory_Background/RejectionLetter/Letter3_Button" to="." method="_on_Letter3_Button_mouse_exited"]
[connection signal="pressed" from="Factory_Background/RejectionLetter/Letter3_Button" to="." method="_on_Letter3_Button_pressed"]
[connection signal="mouse_entered" from="Factory_Background/RejectionLetter/Letter4_Button" to="." method="_on_Letter4_Button_mouse_entered"]
[connection signal="mouse_exited" from="Factory_Background/RejectionLetter/Letter4_Button" to="." method="_on_Letter4_Button_mouse_exited"]
[connection signal="pressed" from="Factory_Background/RejectionLetter/Letter4_Button" to="." method="_on_Letter4_Button_pressed"]
[connection signal="mouse_entered" from="Factory_Background/RejectionLetter/Letter5_Button" to="." method="_on_Letter5_Button_mouse_entered"]
[connection signal="mouse_exited" from="Factory_Background/RejectionLetter/Letter5_Button" to="." method="_on_Letter5_Button_mouse_exited"]
[connection signal="pressed" from="Factory_Background/RejectionLetter/Letter5_Button" to="." method="_on_Letter5_Button_pressed"]
[connection signal="mouse_entered" from="Factory_Background/RejectionLetter/Letter6_Button" to="." method="_on_Letter6_Button_mouse_entered"]
[connection signal="mouse_exited" from="Factory_Background/RejectionLetter/Letter6_Button" to="." method="_on_Letter6_Button_mouse_exited"]
[connection signal="pressed" from="Factory_Background/RejectionLetter/Letter6_Button" to="." method="_on_Letter6_Button_pressed"]
[connection signal="mouse_entered" from="Factory_Background/RejectionLetter/Letter7_Button" to="." method="_on_Letter7_Button_mouse_entered"]
[connection signal="mouse_exited" from="Factory_Background/RejectionLetter/Letter7_Button" to="." method="_on_Letter7_Button_mouse_exited"]
[connection signal="pressed" from="Factory_Background/RejectionLetter/Letter7_Button" to="." method="_on_Letter7_Button_pressed"]
[connection signal="mouse_entered" from="Factory_Background/RejectionLetter/Letter8_Button" to="." method="_on_Letter8_Button_mouse_entered"]
[connection signal="mouse_exited" from="Factory_Background/RejectionLetter/Letter8_Button" to="." method="_on_Letter8_Button_mouse_exited"]
[connection signal="pressed" from="Factory_Background/RejectionLetter/Letter8_Button" to="." method="_on_Letter8_Button_pressed"]
